Add new assertj dependency. Merge dsl tests into init branch.